apps/infra/k8s/frontend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: farmassist-web
spec:
  selector:
    app: farmassist-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
