apps/infra/k8s/frontend/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: farmassistant-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
  - host: farming-assistant.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: farmassist-web
            port:
              number: 80

  tls:
  - hosts:
      - farming-assistant.com
    secretName: farmassistant-cert
